--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -13,11 +13,11 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 
 ## Descrição do Projeto
-> Descrição do objetivo principal do projeto, incluindo contexto gerador, motivação.
-> Escreva essa seção imaginando que está tentando convencer alguém a investir financeiramente no seu projeto.
-> Qual problema vocês pretendem solucionar?
-> Quem são os potenciais usuários?
-> É possível estabelecer um valor econômico associado?
+> Facilitar a vida dos donos de pets 
+> Programar os horários em que seus pets serão alimentados, até quando estiverem fora de casa.
+> Quantidade a ser colocada na tigela (dieta controlada); monitoramento da quantidade de vezes que a tigela for esvaziada pelo pet
+> Controle de duração de saco de ração
+> transformar em texto os topicos
 
 
 ## Descrição Funcional
