--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -28,10 +28,16 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 ### Funcionalidades
 >- Comunicação Wireless
 >- Medição do nível do reservatório de comida
+>- Medição do nível no pote de ração
 >- Mecanismo de dispenser da comida, com volume/massa regulável
+>- Avisos ao usuário (via mobile) dos níveis de comida  do reservatório
+>- Monitoramento da alimentação do pet
 
 ### Configurabilidade
-> Detalhe, se houver, todas as possíveis configurações do circuito e todos os pontos de alteração da configuração.
+> Configurações através de sistema mobile, sendo personalizáveis:
+> - Quantidade de refeições
+> - Ajuste de massa de cada porção
+> - Horário das refeições
 
 ### Eventos
 > Quais eventos o sistema deve tratar?
