--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -32,6 +32,7 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 >- Mecanismo de dispenser da comida, com volume/massa regulável
 >- Avisos ao usuário (via mobile) dos níveis de comida  do reservatório
 >- Monitoramento da alimentação do pet
+>- Rendimento da ração
 
 ### Configurabilidade
 > Configurações através de sistema mobile, sendo personalizáveis:
@@ -46,6 +47,9 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 ### Tratamento de Eventos
 > Qual comportamento o sistema deve ter para tratar corretamente cada evento?
+> - Detectou reservatório vazio
+> - Recebeu configuração do horário
+> - Recebeu configuração de massa
 
 ## Descrição Estrutural do Sistema
 > Junto com a descrição do comportamento do sistema, deve-se especificar, em nível de bloco ou sistema, a estrutura necessária 
