--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -13,12 +13,7 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 
 ## Descrição do Projeto
-> - Facilitar a vida dos donos de pets
-> - Programar os horários em que seus pets serão alimentados, até quando estiverem fora de casa.
-> - Quantidade a ser colocada na tigela (dieta controlada); monitoramento da quantidade de vezes que a tigela for esvaziada pelo pet
-> - Controle de duração de saco de ração
->
-> - transformar em texto os topicos
+> O SmartFeeder representa uma revolução na forma como cuidamos dos nossos pets. O dispenser de comida para animais de estimação é controlado por um aplicativo intuitivo, proporcionando conveniência e tranquilidade para os donos preocupados com a alimentação de seus amigos peludos. Com o SmartFeeder, é possível programar horários precisos de alimentação, garantindo que o animal receba suas refeições na hora certa, mesmo quando o dono estiver longe de casa. Seja durante o período de trabalho ou  durante uma viagem, pode-se monitorar e controlar a alimentação do seu pet remotamente, garantindo que ele esteja sempre bem alimentado e saudável. Além disso, uma série de recursos inteligentes são pensados para auxiliar no monitoramento do seu pet: como notificações em tempo real sobre alimentação, controle preciso das porções servidas e até mesmo qual a massa específica consumida pelo pet.
 
 
 ## Descrição Funcional
