--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -21,19 +21,16 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 > com links para diagramas ou outros arquivos que estejam no próprio repositório.
 
 ### Funcionalidades
->- Comunicação Wireless
->- Medição do nível do reservatório de comida
->- Medição do nível no pote de ração
->- Mecanismo de dispenser da comida, com volume/massa regulável
->- Avisos ao usuário (via mobile) dos níveis de comida  do reservatório
->- Monitoramento da alimentação do pet
->- Rendimento da ração
+> O projeto tem como principais funcionalidades:
+>- Alimentação de pets através do ajuste wireless (pelo usuário - dono) dos horários e quantidades das porções diárias que fazem parte da dieta do mesmo;
+>- Medição do nível do reservatório de comida e na tigela de alimentação (cheia vs. vazia)
+>- Mecanismo de dispenser da comida, com volume/massa regulável;
+>- Aviso ao usuário (via mobile) quando o nível de comida no reservatório estiver baixo;
+>- Monitoramento da alimentação do pet a fim de monitorar o rendimento da ração.
 
 ### Configurabilidade
-> Configurações através de sistema mobile, sendo personalizáveis:
-> - Quantidade de refeições
-> - Ajuste de massa de cada porção
-> - Horário das refeições
+> Quanto a configurabilidade do sistema, o usuário será responsável pera personalização do sistema de acordo com suas necessidades, definindo, via mobile, quantas porções fazem parte da dieta do pet definindo tanto horários para acionamento do dispenser quanto a quantidade de cada porção.
+
 
 ### Eventos
 > Quais eventos o sistema deve tratar?
