--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -26,7 +26,7 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 >- Medição do nível do reservatório de comida e na tigela de alimentação (cheia vs. vazia)
 >- Mecanismo de dispenser da comida, com volume/massa regulável;
 >- Aviso ao usuário (via mobile) quando o nível de comida no reservatório estiver baixo;
->- Monitoramento da alimentação do pet a fim de monitorar o rendimento da ração.
+>- Monitoramento da alimentação do pet a fim de acompanhar o rendimento da ração.
 
 ### Configurabilidade
 > Quanto a configurabilidade do sistema, o usuário será responsável pera personalização do sistema de acordo com suas necessidades, definindo, via mobile, quantas porções fazem parte da dieta do pet definindo tanto horários para acionamento do dispenser quanto a quantidade de cada porção.
