--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -34,6 +34,7 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 ### Eventos
 > Quais eventos o sistema deve tratar?
+> O sistema deverá tratar a configuração de horário para acionamento do dispenser. Além da configuração de quantidade da porção. A partir disso irá periodicamente acionar a quantidade  correta de porção liberada para tigela quando houver o acionamento deste dispenser. Deverá também acionar avisos distintos ao usuário quando o reservatório estiver vazio ( e quando a tigela estiver vazia (contabilizando uma refeição do pet).
 > Se aplicável, classifique os eventos que são periódicos (procure especificar a periodicidade) e os que são não-periódicos
 > (qual o tempo mínimo entre dois eventos sucessivos)?
 
