--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -33,10 +33,9 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 
 ### Eventos
-> Quais eventos o sistema deve tratar?
-> O sistema deverá tratar a configuração de horário para acionamento do dispenser. Além da configuração de quantidade da porção. A partir disso irá periodicamente acionar a quantidade  correta de porção liberada para tigela quando houver o acionamento deste dispenser. Deverá também acionar avisos distintos ao usuário quando o reservatório estiver vazio ( e quando a tigela estiver vazia (contabilizando uma refeição do pet).
-> Se aplicável, classifique os eventos que são periódicos (procure especificar a periodicidade) e os que são não-periódicos
-> (qual o tempo mínimo entre dois eventos sucessivos)?
+> Quanto aos eventos, enquanto o sistema estiver em configuração, a alimentação será interrompida. Deverá então ser definido os horários para acionamento do dispenser e as quantidades a serem liberadas em cada uma. A partir disso o sistema irá periodicamente acionar a alimentaçãp do pet.
+> Deverá também acionar avisos distintos ao usuário via mobile quando o reservatório estiver com 10% de sua capacidade e quando a tigela de alimentação estiver vazia, contabilizando uma refeição do animal.
+
 
 ### Tratamento de Eventos
 > Qual comportamento o sistema deve ter para tratar corretamente cada evento?
