--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -39,9 +39,10 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 ### Tratamento de Eventos
 > Qual comportamento o sistema deve ter para tratar corretamente cada evento?
-> - Detectou reservatório vazio
-> - Recebeu configuração do horário
-> - Recebeu configuração de massa
+> - Detectou reservatório com >10% da sua capacidade: aciona led verde
+> - Detectou reservatório com 10% de sua capacidade: aciona led amarelo e envia uma notificação para o usuário via mobile para reabastecimento.
+> - Detectou reservatório vazio: aciona led vermelho e envia uma notificação para o usuário via mobile para reabastecimento.
+> - Recebeu configuração do horário e de porção: aciona periodicamente a alimentação do animal através do acionamento do dispenser.
 
 ## Descrição Estrutural do Sistema
 > Junto com a descrição do comportamento do sistema, deve-se especificar, em nível de bloco ou sistema, a estrutura necessária 
