--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -38,7 +38,7 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 
 ### Tratamento de Eventos
-> Qual comportamento o sistema deve ter para tratar corretamente cada evento?
+Os comportamentos para tratamento dos eventos descritos serão:
 > - Detectou reservatório com >10% da sua capacidade: aciona led verde
 > - Detectou reservatório com 10% de sua capacidade: aciona led amarelo e envia uma notificação para o usuário via mobile para reabastecimento.
 > - Detectou reservatório vazio: aciona led vermelho e envia uma notificação para o usuário via mobile para reabastecimento.
