--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -57,4 +57,4 @@ Os comportamentos para tratamento dos eventos descritos serão:
 > 
 
 ## Referências
-> Seção obrigatória. Inclua aqui referências utilizadas no projeto.
+> MADOG. Comedouro Automático. Disponível em: https://www.madog.com.br/MLB-2161381341-comedouro-automatico-inteligente-madog-com-gravador-voz-_JM
