--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -13,12 +13,10 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 
 ## Descrição do Projeto
-> O SmartFeeder representa uma revolução na forma como cuidamos dos nossos pets. O dispenser de comida para animais de estimação é controlado por um aplicativo intuitivo, proporcionando conveniência e tranquilidade para os donos preocupados com a alimentação de seus amigos peludos. Com o SmartFeeder, é possível programar horários precisos de alimentação, garantindo que o animal receba suas refeições na hora certa, mesmo quando o dono estiver longe de casa. Seja durante o período de trabalho ou  durante uma viagem, pode-se monitorar e controlar a alimentação do seu pet remotamente, garantindo que ele esteja sempre bem alimentado e saudável. Além disso, uma série de recursos inteligentes são pensados para auxiliar no monitoramento do seu pet: como notificações em tempo real sobre alimentação, controle preciso das porções servidas e até mesmo qual a massa específica consumida pelo pet.
+> O SmartFeeder representa uma revolução na forma como cuidamos dos nossos pets. O dispenser de comida para animais de estimação é controlado por um aplicativo intuitivo, proporcionando conveniência e tranquilidade para os donos preocupados com a alimentação de seus amigos peludos. Com o SmartFeeder, é possível programar horários precisos de alimentação, garantindo que o animal receba suas refeições na hora certa, mesmo quando o dono estiver longe de casa. Seja durante o período de trabalho ou  durante uma viagem, pode-se monitorar e controlar a alimentação do seu pet remotamente, garantindo que ele esteja sempre bem alimentado e saudável. Além disso, uma série de recursos inteligentes são pensados para auxiliar no monitoramento do seu pet: como notificações em tempo real sobre alimentação, controle preciso das porções servidas e até mesmo qual a massa específica consumida pelo pet. Além disso, o SmartFeeder possui também um vasilhame d'água, com reposição automática, para que seu pet tenha sempre água para beber.
 
 
 ## Descrição Funcional
-> A descrição funcional do projeto é a principal entrega do E1 e pode ser realizada neste próprio arquivo Markdown,
-> com links para diagramas ou outros arquivos que estejam no próprio repositório.
 
 ### Funcionalidades
 > O projeto tem como principais funcionalidades:
@@ -27,9 +25,11 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 >- Mecanismo de dispenser da comida, com volume/massa regulável;
 >- Aviso ao usuário (via mobile) quando o nível de comida no reservatório estiver baixo;
 >- Monitoramento da alimentação do pet a fim de acompanhar o rendimento da ração.
+>- Monitoramento da ingestão de água
+>- Mecanismo de enchimento da vasilha de água do pet.
 
 ### Configurabilidade
-> Quanto a configurabilidade do sistema, o usuário será responsável pera personalização do sistema de acordo com suas necessidades, definindo, via mobile, quantas porções fazem parte da dieta do pet definindo tanto horários para acionamento do dispenser quanto a quantidade de cada porção.
+> Quanto a configurabilidade do sistema, o usuário será responsável pera personalização do sistema de acordo com suas necessidades, definindo, via mobile, quantas porções fazem parte da dieta do pet, definindo tanto horários para acionamento do dispenser quanto a quantidade de cada porção.
 
 
 ### Eventos
@@ -60,3 +60,5 @@ Os comportamentos para tratamento dos eventos descritos serão:
 > MADOG. Comedouro Automático. Disponível em: https://www.madog.com.br/MLB-2161381341-comedouro-automatico-inteligente-madog-com-gravador-voz-_JM
 > 
 > DOGIS. Alimentador Automático. Disponível em: https://www.dogis.com.br/som-e-video/alimentador-automatico-pet-dogis-da010br-com-camera-full-hd-wi-fi-aplicativo-capacidade-de-6-litros?parceiro=4972&gad_source=1&gclid=CjwKCAjwtqmwBhBVEiwAL-WAYek92ZZTHrK0SYdxBEBao9r93Kz1aHOxFH06iLSiU2fGpBTl1r9t4hoCixwQAvD_BwE
+>
+> WEASY. Weasy Oasis. Disponível em: https://www.weasy.com.br/products/weasy-oasis?variant=32277452783695&currency=BRL&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&gad_source=1&gclid=Cj0KCQjw2a6wBhCVARIsABPeH1sAXLDyqX-aO8CgqyUsDRRZeY-H1G8rfBFdN8DTA2uM9PdB25bSHzEaAvQEEALw_wcB
