--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -17,6 +17,7 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 
 ## Descrição Funcional
+<img src="\E1 - água.drawio.png">
 
 ### Funcionalidades
 > O projeto tem como principais funcionalidades:
