--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -45,7 +45,7 @@ Os comportamentos para tratamento dos eventos descritos serão:
 > - Recebeu configuração do horário e de porção: aciona periodicamente a alimentação do animal através do acionamento do dispenser.
 
 ## Descrição Estrutural do Sistema
-<img src="\agua.drawio.png">
+<img src="\bebedouro.drawio.png">
 
 ## Referências
 > MADOG. Comedouro Automático. Disponível em: https://www.madog.com.br/MLB-2161381341-comedouro-automatico-inteligente-madog-com-gravador-voz-_JM
