--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -39,9 +39,11 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 ### Tratamento de Eventos
 Os comportamentos para tratamento dos eventos descritos serão:
-> - Detectou reservatório com >10% da sua capacidade: aciona led verde
-> - Detectou reservatório com 10% de sua capacidade: aciona led amarelo e envia uma notificação para o usuário via mobile para reabastecimento.
-> - Detectou reservatório vazio: aciona led vermelho e envia uma notificação para o usuário via mobile para reabastecimento.
+> - Detectou reservatório vazio
+> - Detectou reservatório com cheio após configurações setadas
+> - Relógio comparador chegou ao horário definido para refeição
+> - Detectou prato vazio no horário setado
+> - Detectou prato com sobra no horário setado
 > - Recebeu configuração do horário e de porção: aciona periodicamente a alimentação do animal através do acionamento do dispenser.
 
 ## Descrição Estrutural do Sistema
