--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -17,7 +17,7 @@ oferecida no primeiro semestre de 2024, na Unicamp, sob supervisão da Profa. Dr
 
 
 ## Descrição Funcional
-
+O projeto contempla dois funcionamentos distintos: Comedouro e Bebedouro, assim, cada função foi tratada separadamente, pois independem em funcionamento.
 ### Funcionalidades
 > O projeto tem como principais funcionalidades:
 >- Alimentação de pets através do ajuste wireless (pelo usuário - dono) dos horários e quantidades das porções diárias que fazem parte da dieta do mesmo;
@@ -47,8 +47,9 @@ Os comportamentos para tratamento dos eventos descritos serão:
 > - Recebeu configuração do horário e de porção: aciona periodicamente a alimentação do animal através do acionamento do dispenser.
 
 ## Descrição Estrutural do Sistema
+Os dois sistemas (bebedouro e comedouro) descritos:
 <img src="\bebedouro.drawio.png">
-
+<img src="\comedouro.drawio.png">
 ## Referências
 > MADOG. Comedouro Automático. Disponível em: https://www.madog.com.br/MLB-2161381341-comedouro-automatico-inteligente-madog-com-gravador-voz-_JM
 > 
