--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -48,8 +48,10 @@ Os comportamentos para tratamento dos eventos descritos serão:
 
 ## Descrição Estrutural do Sistema
 Os dois sistemas (bebedouro e comedouro) descritos:
-
+> - Função de Bebedouro:
 <img src="\bebedouro.drawio.png">
+>
+> - Função de Comedouro:
 <img src="\comedouro.drawio.png">
 
 ## Referências
