--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -34,17 +34,22 @@ O projeto contempla dois funcionamentos distintos: Comedouro e Bebedouro, assim,
 
 ### Eventos
 > Quanto aos eventos, enquanto o sistema estiver em configuração, a alimentação será interrompida. Deverá então ser definido os horários para acionamento do dispenser e as quantidades a serem liberadas em cada uma. A partir disso o sistema irá periodicamente acionar a alimentaçãp do pet.
-> Deverá também acionar avisos distintos ao usuário via mobile quando o reservatório estiver com 10% de sua capacidade e quando a tigela de alimentação estiver vazia, contabilizando uma refeição do animal.
+> Deverá também acionar avisos distintos ao usuário via mobile quando o reservatório estiver com sua capacidade abaixo do limitdefinido pelo usuário e quando a tigela de alimentação estiver vazia, contabilizando uma refeição do animal.
+> Quando o sensor detectar que o nível do bebedouro estiver abaixo de um determinado nível de BIAS_VAZIO, ele enche o pote com água até um nível BIAS_CHEIO.
 
 
 ### Tratamento de Eventos
 Os comportamentos para tratamento dos eventos descritos serão:
+> *COMEDOURO*
 > - Detectou reservatório vazio
 > - Detectou reservatório com cheio após configurações setadas
 > - Relógio comparador chegou ao horário definido para refeição
 > - Detectou prato vazio no horário setado
 > - Detectou prato com sobra no horário setado
 > - Recebeu configuração do horário e de porção: aciona periodicamente a alimentação do animal através do acionamento do dispenser.
+> *Bebedouro*
+> - Detecta nível de água baixo e enche
+> - Detecta nível alto e para de encher
 
 ## Descrição Estrutural do Sistema
 Os dois sistemas (bebedouro e comedouro) descritos:
