--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -47,7 +47,8 @@ Os comportamentos para tratamento dos eventos descritos serão:
 > - Detectou prato vazio no horário setado
 > - Detectou prato com sobra no horário setado
 > - Recebeu configuração do horário e de porção: aciona periodicamente a alimentação do animal através do acionamento do dispenser.
-> *Bebedouro*
+
+> *BEBEDOURO*
 > - Detecta nível de água baixo e enche
 > - Detecta nível alto e para de encher
 
