--- a/projetos/smartfeeder/ea075-E1.md
+++ b/projetos/smartfeeder/ea075-E1.md
@@ -50,7 +50,7 @@ Os comportamentos para tratamento dos eventos descritos serão:
 
 > *BEBEDOURO*
 > - Detecta nível de água baixo e enche
-> - Detecta nível alto e para de encher
+> - Detecta nível alto de água e para de encher
 
 ## Descrição Estrutural do Sistema
 Os dois sistemas (bebedouro e comedouro) descritos:
